--- a/app/views/worlds/index.html.erb
+++ b/app/views/worlds/index.html.erb
@@ -1,7 +1,7 @@
 <h1> world index page </h1>
 
 <ul>
-<% worlds.each do |w| %>
+<% @worlds.each do |w| %>
 
     <li><%= link_to w.name, world_path(w) %> ||
    </li>
@@ -10,4 +10,3 @@
 <% end %>
 </ul>
 <br>
-<%= link_to 'create a new world', worlds_new_path %>
