fixed world controller new/create

--- a/app/views/worlds/index.html.erb
+++ b/app/views/worlds/index.html.erb
@@ -1,5 +1,10 @@
 <h1> world index page </h1>
 
+<div>
+    <strong><%= link_to "CREATE A NEW WORLD", new_world_path %></strong>
+    </div>
+    <br>
+
 <ul>
 <% @worlds.each do |w| %>
 
