--- a/app/views/characters/_form.html.erb
+++ b/app/views/characters/_form.html.erb
@@ -1,5 +1,13 @@
 <%= form_for(@character) do |f| %>
 
+    <% if @character.world.nil? %>
+        <label class="label">character world:</label>
+        <%= f.select :world_id, options_from_collection_for_select(world.all, :id, :name) %><br>
+        <i>Don't see your world? Create a new world <%= link_to "here.", new_world_path %></i><br><br>
+    <% else %>
+        <%= hidden_field_tag "character[world_id]", @character.world_id %>
+    <% end %>
+
     <label class="label"> Name: </label>
     <%= f.text_field :name %><br><br>
 
