deleted unneeded code

--- a/app/views/characters/_form.html.erb
+++ b/app/views/characters/_form.html.erb
@@ -12,10 +12,7 @@
     <%= f.text_field :name %><br><br>
 
     <label class="label">Character Class:</label>
-    <%= f.text_field :character_class %><br><br>
-
-    <label class="label">Alignment:</label>
-    <%= f.text_field :alignment %><br><br>
+    <%= f.text_field :type %><br><br>
 
     <label class="label">Species:</label>
     <%= f.text_field :species %><br><br>
