--- a/app/views/worlds/show.html.erb
+++ b/app/views/worlds/show.html.erb
@@ -30,7 +30,7 @@
   <h3>plots in <%= @world.name %> </h3>
             <% @plots.each do |p| %>
                 
-                  <li><%= link_to p.title, world_plot_path(@world.plot) %></li>
+                  <li><%= link_to p.title, world_plots_path(@world.plots) %></li>
  
             <% end %>
             <br>
@@ -42,7 +42,7 @@
             <div>
              <% @characters.each do |c| %>
                 
-                  <li><%= link_to c.name, world_character_path(@world.character) %></li>
+                  <li><%= link_to c.name, world_characters_path(@world.characters) %></li>
  <% end %>
              </div>
 </p>
