added the opening page words

--- a/app/views/worlds/home.html.erb
+++ b/app/views/worlds/home.html.erb
@@ -1,1 +1,10 @@
-hello
+<h1>Welcome to Worlding!</h1>
+<p>Here you can share your world and character ideas, 
+as well as read up on others.</p>
+<br>
+<br>
+    <h3>Want the world with the most plots?</h3>
+
+    <%= link_to "Click here", worlds_most_plots_path %> to view the world with the most plots.
+    
+<br>
