deleted unneeded code in world index

--- a/app/views/worlds/index.html.erb
+++ b/app/views/worlds/index.html.erb
@@ -8,7 +8,7 @@
 <ul>
 <% @worlds.each do |w| %>
 
-    <li><%= link_to w.name, world_path(w) %> ||
+    <li><%= link_to w.name, world_path(w) %> 
    </li>
    <br> 
    
