met with hanaa, fixed edit char

--- a/app/views/characters/edit.html.erb
+++ b/app/views/characters/edit.html.erb
@@ -2,6 +2,6 @@
 
 <%= render partial: "form", locals: {character: @character} %>
 
-<% @doc.errors.full_messages.each do |error| %>
+<% @character.errors.full_messages.each do |error| %>
 <%= error %> <br>
 <% end %>
