added a belongs to p in characters

--- a/app/views/characters/show.html.erb
+++ b/app/views/characters/show.html.erb
@@ -3,7 +3,8 @@
     
     <%= link_to "delete character", @character, method: :delete, data: { confirm: 'Are you sure?' } %>
   <% else %>
- 
+  This character belongs to <%= @world.user.email %>
+  
 <% end %>
 
 <p>
