--- a/app/views/worlds/index.html.erb
+++ b/app/views/worlds/index.html.erb
@@ -7,8 +7,9 @@
 
     <br>
 
-    <%= form_tag(worlds_path method: :get) do %>
-        <%= text_field_tag :search, params[:search] %>
+    <h2>Search by World!</h2>
+    <%= form_tag(worlds_path, method: :get) do %>
+        <%= text_field_tag(:search, params[:search]) %>
         <%= submit_tag 'Search', name: nil %>
     <% end %>
 
