adding search into index page for worlds

--- a/app/views/worlds/index.html.erb
+++ b/app/views/worlds/index.html.erb
@@ -7,10 +7,10 @@
 
     <br>
 
-    <h2>Search by World!</h2>
+    <h2>Search by World:</h2>
     <%= form_tag(worlds_path, method: :get) do %>
         <%= text_field_tag(:search, params[:search]) %>
-        <%= submit_tag 'Search', name: nil %>
+        <%= submit_tag ("Search") %>
     <% end %>
 
     <br>
